Implemented company management details
