# codegen/schema/swagger.json
@@ -401,6 +401,63 @@
         ]
       }
     },
+    "/api/assets/vulnerability/{vulnerability_id}": {
+      "get": {
+        "tags": [
+          "Assets"
+        ],
+        "summary": "Lists assets by vulnerability id",
+        "operationId": "getAssetsByVulnerabilityId",
+        "parameters": [
+          {
+            "name": "vulnerability_id",
+            "in": "query",
+            "description": "Vulnerability id",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          },
+          {
+            "name": "page",
+            "in": "query",
+            "description": "Page number",
+            "required": false,
+            "schema": {
+              "type": "integer",
+              "default": 1
+            }
+          },
+          {
+            "name": "count",
+            "in": "query",
+            "description": "Number of items per page",
+            "required": false,
+            "schema": {
+              "type": "integer",
+              "default": 10
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/AssetPagingResource"
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "sanctum": []
+          }
+        ]
+      }
+    },
     "/api/assets/{id}": {
       "get": {
         "tags": [
